changed desc text color

--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -5,7 +5,7 @@
 @theme {
   --color-bg-lm: #f6ebdc;
   --color-text-lm: #d94355;
-  --color-text-linethrough: #d94355;
+  --color-text-linethrough: #561A22;
 
   --color-accent-lm: #321d34;
 
