--- a/react-frontend/src/output.css
+++ b/react-frontend/src/output.css
@@ -749,6 +749,9 @@
 html, body, #root {
   height: 100%;
 }
+:root {
+  --spacing: 0.25rem;
+}
 #root {
   overflow-y: scroll;
   scrollbar-color: var(--color-accent-lm) var(--color-bg-lm);
